# FFmpegPlayer

app/: build.gradle
app/src/androidTest/java/com/von/ffmpeg/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg_native.cpp  ffmpeg_native.h
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/java/com/von/ffmpeg/demo/: MainActivity.kt
app/src/main/java/com/von/ffmpeg/demo/utils/: FFmpegNative.java
app/src/test/java/com/von/ffmpeg/demo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
